// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render single expense correctly 1`] = `
<div>
  <h2>
     Viewing 
    1
     
    expense
     totalling 
    $575.00
     
  </h2>
</div>
`;

exports[`should render the component 1`] = `
<div>
  <h2>
     Viewing 
    0
     
    expenses
     totalling 
    $0.00
     
  </h2>
</div>
`;

exports[`should render total for multiple expenses 1`] = `
<div>
  <h2>
     Viewing 
    15
     
    expenses
     totalling 
    $527,765.00
     
  </h2>
</div>
`;
